syntax="proto3";

option go_package = "github.com/jamiebmurray25/grpc-crud/protobuf";

package todo;

import "google/protobuf/timestamp.proto";

service Todo {
  rpc GetTodo (GetTodoRequest) returns (TodoReply) {}
  rpc CreateTodo (CreateTodoRequest) returns (TodoReply) {}
}


message GetTodoRequest {
  string id = 1;
}

message CreateTodoRequest {
  string title = 1;
}

message TodoReply {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp createdAt = 3;
}
